test_case/rust-lang_rust/51090_392276410_38.rs
\n"},"level":"error","spans":[{"file_name":"/checkout/src/test/ui/feature-gate-abi.rs","byte_start":2655,"byte_end":2684,"line_start":46,"line_end":46,"column_start":5,"column_end":34,"is_primary":true,"text":[{"text":"    extern \"thiscall\" fn dm8() {} //~ ERROR thiscall is experimental and subject to change","highlight_start":5,"highlight_end":34}],"label":null,"suggested_replacement":null,"suggestion_applicability":null,"expansion":null}],"children":[{"message":"add #![feature(abi_thiscall)] to the crate attributes to enable","code":null,"level":"help","spans":[],"children":[],"rendered":null}],"rendered":"error[E0658]: thiscall is experimental and subject to change\n  --> /checkout/src/test/ui/feature-gate-abi.rs:46:5\n   |\nLL |     extern \"thiscall\" fn dm8() {} //~ ERROR thiscall is experimental and subject to change\n   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n   |\n   = help: add #![feature(abi_thiscall)] to the crate attributes to enable\n\n"}
[00:43:58] {"message":"intrinsics are subject to change","code":{"code":"E0658","explanation":"\nAn unstable feature was used.\n\nErroneous code example:\n\n